ncc/testsuite/negative/derived.n

class A : array [int] // E: derived or implemented type must be a class
{
}

